feat: added wall color change palette

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                         <option value="ft">Feet (ft)</option>
                     </select>
                 </div>
+                <div>
+                    <label for="wallColor" class="block text-sm font-medium text-slate-600">Wall Color</label>
+                    <input type="color" id="wallColor" value="#f4f2ed" class="mt-1 block w-full h-10 rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+                </div>
             </div>
 
             <!-- Add Poster -->
