feat: added export option

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <link rel="stylesheet" href="style.css">
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-800">
 
@@ -111,7 +112,8 @@
                      <button id="layoutGrid" class="w-full bg-slate-200 text-slate-700 font-semibold py-2 px-3 text-sm rounded-md hover:bg-slate-300 transition">Grid</button>
                     <button id="layoutHorizontal" class="w-full bg-slate-200 text-slate-700 font-semibold py-2 px-3 text-sm rounded-md hover:bg-slate-300 transition">Horizontal</button>
                     <button id="layoutVertical" class="w-full bg-slate-200 text-slate-700 font-semibold py-2 px-3 text-sm rounded-md hover:bg-slate-300 transition">Vertical</button>
-                    <button id="clearAllBtn" class="w-full bg-red-500 text-white font-semibold py-2 px-3 text-sm rounded-md hover:bg-red-600 transition col-span-2">Clear All Photos</button>
+                    <button id="clearAllBtn" class="w-full bg-red-500 text-white font-semibold py-2 px-3 text-sm rounded-md hover:bg-red-600 transition">Clear All Photos</button>
+                    <button id="exportImageBtn" class="w-full bg-green-600 text-white font-semibold py-2 px-3 text-sm rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 transition col-span-2">Export as Image</button>
                 </div>
             </div>
         </div>
