--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body class="bg-slate-50 text-slate-800">
 
     <div id="app" class="flex flex-col md:flex-row h-screen w-screen overflow-hidden">
-        
         <!-- Controls Panel -->
         <div class="w-full md:w-80 lg:w-96 bg-white border-r border-slate-200 p-6 flex flex-col space-y-6 overflow-y-auto control-panel">
             <header>
@@ -125,6 +124,9 @@
             </div>
         </div>
     </div>
+
+<!-- 🌙 Floating Dark Mode Button -->
+    <button id="darkModeToggle" title="Toggle Dark Mode">🌙</button>
 
     <script src="script.js"></script>
 </body>
